--- a/xprof/btx_aggreg_model.yaml
+++ b/xprof/btx_aggreg_model.yaml
@@ -1,5 +1,5 @@
 :stream_classes:
-  - :name: interval_tally
+  - :name: interval_aggreg
     :event_common_context_field_class:
       :type: structure
       :members:
