--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -482,7 +482,7 @@ trace_epilogue_live() {
         mv $THAPI_LTTNG_O_ROOT $new_output
         THAPI_LTTNG_O=$new_output
 
-        # All the trace have been saved. We can now do the move
+        # All the trace have been saved. We can now do the print
         for x in $(ls $THAPI_LTTNG_O/tally_*.log | sort -V || true); do
            echo $x
            cat $x
