--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -100,10 +100,10 @@ text_pretty = BT2::BTPlugin.find('text').get_sink_component_class_by_name('prett
 
 thapi_plugins = BT2::BTPlugin.find_all_from_dir(File.join("@prefix@", "lib"))
 
+# Used for tally and timeline
 interval_plugins = thapi_plugins.filter_map do |plugin|
   plugin.get_filter_component_class_by_name('interval') if $options[:backends].include?(plugin.name.chomp('interval'))
 end
-
 
 # Fix segfault
 ARGV.uniq!
@@ -171,6 +171,11 @@ serial_comps =
     }
     graph.add_simple_sink('babeltrace_thapi', consume)
   when 'tally'
+
+    thapi_plugins.each do |plugin|
+      interval_plugins << plugin.get_filter_component_class_by_name('aggreg') if plugin.name == 'btx_aggreg'
+    end
+
     comp_intervals = interval_plugins.map.with_index do |comp, i|
       graph.add_component(comp, "interval_#{i}")
     end
