--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -25,7 +25,7 @@ $options_tally = {
   'display_metadata' => [FalseClass, false],
   'display_name_max_size' => [Integer, 80],
   'display_kernel_verbose' => [FalseClass, false],
-  'backend_level' => [String, '']
+  'backend_level' => [String, ''],
 }
 
 def common_options(opts)
@@ -77,7 +77,7 @@ subcommands = {
     OptionParser.new do |opts|
       opts.banner = 'Usage: timeline [OPTIONS] trace_directory...'
       common_options(opts)
-    end
+    end,
 }
 
 $options.merge!($options_tally)
@@ -97,7 +97,7 @@ components_classes = {
   'source.ctf.fs' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('fs'),
   'source.ctf.lttng_live' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('lttng-live'),
   'filter.utils.muxer' => BT2::BTPlugin.find('utils').get_filter_component_class_by_name('muxer'),
-  'sink.text.pretty' => BT2::BTPlugin.find('text').get_sink_component_class_by_name('pretty')
+  'sink.text.pretty' => BT2::BTPlugin.find('text').get_sink_component_class_by_name('pretty'),
 }
 
 # THAPI components
@@ -107,7 +107,6 @@ thapi_plugins.map do |pg|
   pg.filter_component_classes.each { |c| components_classes["filter.#{pg.name}.#{c.name}"] = c }
   pg.sink_component_classes.each { |c| components_classes["sink.#{pg.name}.#{c.name}"] = c }
 end
-
 
 graph = BT2::BTGraph.new
 
@@ -189,7 +188,7 @@ when 'tally'
   end
   comps << graph.add_component(components_classes['filter.btx_aggreg.aggreg'], 'aggreg')
   comps << graph.add_component(components_classes['sink.btx_tally.tally'], 'tally',
-                              params: $options_tally.transform_values { |_, v| v })
+                               params: $options_tally.transform_values { |_, v| v })
 when 'timeline'
   $options[:backends].each_with_index do |name, i|
     comps << graph.add_component(components_classes["filter.#{name}interval.interval"], "interval_#{i}")
