--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -112,7 +112,7 @@ graph = BT2::BTGraph.new
 
 # Source components
 if !$options[:live]
-  ctf_fs = components_classes['source.ctf.fs']
+  ctf_fs = components_classes.fetch('source.ctf.fs')
 
   trace_locations =
     Find.find(*ARGV).reject do |path|
@@ -132,7 +132,7 @@ if !$options[:live]
   end
 else
   trace_locations = ARGV
-  ctf_lttng_live = components_classes['source.ctf.lttng_live']
+  ctf_lttng_live = components_classes.fetch('source.ctf.lttng_live')
   comp_sources = trace_locations.each_with_index.map do |trace_location, i|
     graph.add_component(ctf_lttng_live, "source_#{i}",
                         params: { 'inputs' => [trace_location], 'session-not-found-action' => 'end' })
@@ -140,7 +140,7 @@ else
 end
 
 # Muxer components
-comp_muxer = graph.add_component(components_classes['filter.utils.muxer'], 'muxer')
+comp_muxer = graph.add_component(components_classes.fetch('filter.utils.muxer'), 'muxer')
 
 # Sources to muxer connection
 comp_sources.flat_map(&:output_ports).each_with_index do |op, i|
@@ -184,16 +184,16 @@ when 'trace'
   comps << graph.add_simple_sink('babeltrace_thapi', consume)
 when 'tally'
   $options[:backends].each_with_index do |name, i|
-    comps << graph.add_component(components_classes["filter.#{name}interval.interval"], "interval_#{i}")
+    comps << graph.add_component(components_classes.fetch("filter.#{name}interval.interval"), "interval_#{i}")
   end
-  comps << graph.add_component(components_classes['filter.btx_aggreg.aggreg'], 'aggreg')
-  comps << graph.add_component(components_classes['sink.btx_tally.tally'], 'tally',
+  comps << graph.add_component(components_classes.fetch('filter.btx_aggreg.aggreg'), 'aggreg')
+  comps << graph.add_component(components_classes.fetch('sink.btx_tally.tally'), 'tally',
                                params: $options_tally.transform_values { |_, v| v })
 when 'timeline'
   $options[:backends].each_with_index do |name, i|
-    comps << graph.add_component(components_classes["filter.#{name}interval.interval"], "interval_#{i}")
+    comps << graph.add_component(components_classes.fetch("filter.#{name}interval.interval"), "interval_#{i}")
   end
-  comps << graph.add_component(components_classes['sink.btx_timeline.timeline'], 'timeline')
+  comps << graph.add_component(components_classes.fetch('sink.btx_timeline.timeline'), 'timeline')
 end
 
 # Muxer to serial part
