--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -42,7 +42,9 @@ thapi_metadata_LDFLAGS = $(LTTNG_UST_LIBS)
 
 bin_PROGRAMS = thapi_metadata
 
-bin_SCRIPTS = babeltrace_thapi
+bin_SCRIPTS = \
+	babeltrace_thapi \
+	babeltrace_energy
 
 .PHONY: version
 
