--- a/cuda/Makefile.am
+++ b/cuda/Makefile.am
@@ -17,7 +17,9 @@ CUDA_EXTRA_HDR = \
 	$(srcdir)/include/cuda_device_runtime_api.h \
 	$(srcdir)/include/cuda_runtime_api.h \
 	$(srcdir)/include/vector_types.h \
-	$(srcdir)/include/cudaVDPAU.h
+	$(srcdir)/include/cudaVDPAU.h \
+	$(srcdir)/include/cudaTypedefs.h \
+	$(srcdir)/include/cudaVDPAUTypedefs.h
 CUDA_HDR = \
 	$(srcdir)/include/cuda.h \
 	$(CUDA_EXTRA_HDR)
@@ -32,7 +34,9 @@ MODIFIED_CUDA_EXTRA_HDR = \
 	modified_include/cuda_device_runtime_api.h \
 	modified_include/cuda_runtime_api.h \
 	modified_include/vector_types.h \
-	modified_include/cudaVDPAU.h
+	modified_include/cudaVDPAU.h \
+	modified_include/cudaTypedefs.h \
+	modified_include/cudaVDPAUTypedefs.h
 MODIFIED_CUDA_HDR = \
 	modified_include/cuda.h \
 	$(MODIFIED_CUDA_EXTRA_HDR)
@@ -60,6 +64,9 @@ EXTRA_DIST = $(srcdir)/include headers.patch
 CUDA_EXTRACT = \
 	$(srcdir)/extract_base.rb
 
+cuda_api_versions.yaml: $(srcdir)/extract_cuda_versions.rb modified_include/cudaTypedefs.h modified_include/cudaVDPAUTypedefs.h
+	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+
 cuda_api.yaml: $(srcdir)/extract_cuda.rb $(CUDA_EXTRACT) modified_include/cuda.h modified_include/cudaVDPAU.h
 	SRC_DIR=$(srcdir) $(RUBY) $<
 
@@ -71,7 +78,8 @@ cudart_api.yaml: $(srcdir)/extract_cudart.rb $(CUDA_EXTRACT) modified_include/cu
 
 CUDA_EXTRACTED = \
 	cuda_api.yaml \
-	cuda_exports_api.yaml
+	cuda_exports_api.yaml \
+	cuda_api_versions.yaml
 
 CUDART_EXTRACTED = \
 	cudart_api.yaml
