Simpler script + add profiler API.

--- a/cuda/Makefile.am
+++ b/cuda/Makefile.am
@@ -18,8 +18,10 @@ CUDA_EXTRA_HDR = \
 	$(srcdir)/include/cuda_runtime_api.h \
 	$(srcdir)/include/vector_types.h \
 	$(srcdir)/include/cudaVDPAU.h \
+	$(srcdir)/include/cudaProfiler.h \
 	$(srcdir)/include/cudaTypedefs.h \
-	$(srcdir)/include/cudaVDPAUTypedefs.h
+	$(srcdir)/include/cudaVDPAUTypedefs.h \
+	$(srcdir)/include/cudaProfilerTypedefs.h
 CUDA_HDR = \
 	$(srcdir)/include/cuda.h \
 	$(CUDA_EXTRA_HDR)
@@ -35,8 +37,10 @@ MODIFIED_CUDA_EXTRA_HDR = \
 	modified_include/cuda_runtime_api.h \
 	modified_include/vector_types.h \
 	modified_include/cudaVDPAU.h \
+	modified_include/cudaProfiler.h \
 	modified_include/cudaTypedefs.h \
-	modified_include/cudaVDPAUTypedefs.h
+	modified_include/cudaVDPAUTypedefs.h \
+	modified_include/cudaProfilerTypedefs.h
 MODIFIED_CUDA_HDR = \
 	modified_include/cuda.h \
 	$(MODIFIED_CUDA_EXTRA_HDR)
@@ -64,8 +68,8 @@ EXTRA_DIST = $(srcdir)/include headers.patch
 CUDA_EXTRACT = \
 	$(srcdir)/extract_base.rb
 
-cuda_api_versions.yaml: $(srcdir)/extract_cuda_versions.rb modified_include/cudaTypedefs.h modified_include/cudaVDPAUTypedefs.h
-	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+cuda_api_versions.yaml: $(srcdir)/extract_cuda_versions.rb modified_include/cudaTypedefs.h modified_include/cudaVDPAUTypedefs.h modified_include/cudaProfilerTypedefs.h
+	SRC_DIR=$(srcdir) $(RUBY) $^ > $@
 
 cuda_api.yaml: $(srcdir)/extract_cuda.rb $(CUDA_EXTRACT) modified_include/cuda.h modified_include/cudaVDPAU.h
 	SRC_DIR=$(srcdir) $(RUBY) $<
