--- a/cuda/Makefile.am
+++ b/cuda/Makefile.am
@@ -208,7 +208,8 @@ EXTRA_DIST += \
 BUILT_SOURCES = \
 	$(CUDA_PROBES_INCL) \
 	$(CUDA_STATIC_PROBES_INCL) \
-	$(CUDART_PROBES_INCL)
+	$(CUDART_PROBES_INCL) \
+	tracer_cudart.map
 
 tracer_cuda.c: $(srcdir)/gen_cuda.rb $(srcdir)/tracer_cuda_helpers.include.c $(CUDA_MODEL) $(CUDA_PROBES_INCL) $(CUDA_STATIC_PROBES_INCL) cuda_export_tables.yaml
 	SRC_DIR=$(srcdir) $(RUBY) $< > $@
@@ -216,16 +217,21 @@ tracer_cuda.c: $(srcdir)/gen_cuda.rb $(srcdir)/tracer_cuda_helpers.include.c $(C
 tracer_cudart.c: $(srcdir)/gen_cudart.rb $(srcdir)/tracer_cudart_helpers.include.c $(CUDART_MODEL) $(CUDART_PROBES_INCL)
 	SRC_DIR=$(srcdir) $(RUBY) $< > $@
 
+tracer_cudart.map: $(srcdir)/gen_cudart_linker_script.rb $(CUDART_MODEL)
+	SRC_DIR=$(srcdir) $(RUBY) $< libcudart.so.12 > $@
+
 EXTRA_DIST += \
 	gen_cuda.rb \
 	tracer_cuda_helpers.include.c \
 	cuda_export_tables.yaml \
 	gen_cudart.rb \
+	gen_cudart_linker_script.rb \
 	tracer_cudart_helpers.include.c
 
 CLEANFILES += \
 	tracer_cuda.c \
-	tracer_cudart.c
+	tracer_cudart.c \
+	tracer_cudart.map
 
 cuprof.sh: $(top_builddir)/xprof/xprof.sh.erb
 	$(ERB) -T 1 languages="cuda" $< > $@
@@ -274,7 +280,7 @@ nodist_libTracerCUDART_la_SOURCES = \
 libTracerCUDART_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I../utils -I./
 libTracerCUDART_la_CFLAGS = -Wall -Wextra $(WERROR) $(LIBFFI_CFLAGS) $(LTTNG_UST_CFLAGS)
 libTracerCUDART_la_LDFLAGS = $(LTTNG_UST_LIBS) -ldl -lpthread $(LIBFFI_LIBS)
-libTracerCUDART_la_LDFLAGS += -version-number 12:1:55
+libTracerCUDART_la_LDFLAGS += -version-number 12:1:55 -Wl,--version-script,tracer_cudart.map
 libTracerCUDART_la_LIBADD = libcudarttracepoints.la
 
 install-exec-hook:
